    - Added search to information pages
    - Added science lab page
    - Alt-clicking an ingredient or product in a quick ref window will mark it green
    - Middle-clicking an object will open that object in a new window
  Bugfixes:
    - Fixed that recipe "made in" didn't account for ingredient count limits on assemblers
    - Fixed that rocket launch products weren't being shown in many places due to invalid recipe categories
---------------------------------------------------------------------------------------------------
Version: 2.7.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.7.1
Date: 2021-05-03
  Bugfixes:
    - Fixed a crash when a new force was created
---------------------------------------------------------------------------------------------------
Version: 2.7.0
Date: 2021-05-03
  Features:
    - Added an option to show disabled recipes and technologies
    - Added indicators for when a recipe or technology is disabled
    - Added researched state for labs and offshore pumps
  Changes:
    - Disabled recipes and technologies are hidden by default
    - When a fluid has multiple temperatures, the default temperature will be displayed for fluid products that usually have no temperature
  Bugfixes:
    - Fixed a crash when using the hotkey on a science lab
    - Fixed fluids not being enabled at start even if their offshore pump was
    - Fixed fluid temperature variants not copying recipe categories from their parents
    - Fixed fluid variant ingredient in lists being completely wrong in most cases
    - Fixed several inconsistencies with fluid temperature variation researched status
---------------------------------------------------------------------------------------------------
Version: 2.6.0
Date: 2021-04-05
  Features:
    - Added generic object opening support